# openEtruscan

./: .antigravityignore  .dockerignore  .env.example  .gitignore  .gitleaks.toml  .jscpd.json  .pre-commit-config.yaml  .semgrepignore  .vercelignore  .zenodo.json  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.test  LICENSE  README.md  ROADMAP.md  SECURITY.md  actions.json  alembic.ini  bandit.json  check_gha.py  codemeta.json  dashboard.json  data.dvc  deploy_cos.sh  docker-compose.dev.yml  docker-compose.yml  download_images.py  fix_imports.py  jobs.json  mypy.txt  nginx.conf  nginx.dev.conf  openEtruscan.code-workspace  pyproject.toml  (+6 more)
.agents/: PODS.md
.agents/briefs/: POD-A-corpus.md  POD-B-research.md  POD-C-platform.md  POD-D-quality.md
.agents/rules/: ml-architecture.md
.dvc/: config
.github/: FUNDING.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  language_adapter.md
.github/workflows/: ci.yml  deploy.yml  docs.yml  pages.yml  publish.yml  release.yml  security.yml  workflow.yaml
cloudbuild/: README.md  ci-matrix.yaml  ci.yaml  deploy.yaml  eval-rosetta-v1.yaml  pypi.yaml  security.yaml  v2-classify-jury.yaml  v2-lacuna-jury.yaml  v2-setup.yaml  v2-train-classifier.yaml  v2-train-neural.yaml
data/: README.md  RECOVERED_BUCKETS.md  cie_larth_duplicates.md  codex_texts.yaml  eagle_mapping.yaml  pleiades_mapping.yaml  rejected_inscriptions.csv  trismegistos_mapping.yaml
data/cie/: download_cie.sh  sample_extraction.json
data/contributions/: burman_concordance.csv
data/rdf/: corpus.ttl
docs/: ARCHITECTURE.md  DEVELOPMENT.md  HUGGINGFACE.md  INTELLIGENCE_V2.md  PELAGIOS.md  PELAGIOS_REGISTRATION.md  REPRODUCE.md  openapi.json
docs/internal/: SETUP_WIF.md
dummy-certs/: fullchain.pem  privkey.pem
eval/: README.md  rosetta-eval-v1-20260510T210124Z.json  rosetta-eval-v1-20260511T071620Z.json  rosetta-eval-v1-20260511T080032Z.json
eval/harness/: README.md  _generate_eval_split.py  build_eval_set.py  rerank.py  rosetta_eval_pairs.py  rosetta_eval_v1.sh  run_rosetta_eval.py  run_search_eval.py
eval/p5-experiments/: t5-1-labse-rerank-20260511.json  t5-2-calibration-curve-20260511.json
evals/: README.md  _generate_eval_split.py  build_eval_set.py  latin_semantic_fields.py  rerank.py  rosetta_eval_pairs.py  rosetta_eval_v1.sh  run_rosetta_eval.py  run_search_eval.py  search_eval_queries.jsonl
frontend/: Dockerfile  README.md  aldine.config.ts  build_log.txt  build_log_v3.txt  build_log_v4.txt  burn_layout.js  next.config.ts  package-lock.json  package.json  postcss.config.js  tailwind.config.ts  task.md  test_corrupt.mjs  tmp-generate.js
frontend/app/: globals.css  globals.scss  layout.tsx  page.module.css  page.tsx  providers.tsx  robots.ts  sitemap.ts
frontend/components/: CitationExport.tsx  EtruscanParticles.tsx  Footer.module.css  Footer.tsx  GlyphField.tsx  MapView.tsx  Nav.module.css  Nav.tsx
frontend/lib/: classifier.ts  corpus.ts  normalizer.ts
models/etr-lora-v4/: README.md
research/: BIBLIOGRAPHY.md  CURATION_FINDINGS.md  EXECUTION_WBS.md  FINDINGS.md  README.md  ROADMAP.md  SOTA_ROADMAP.md  WBS.md
research/anchors/: README.md  agent_decisions.tsv  attested.jsonl  hard_negatives.jsonl  llm_anchors_raw.jsonl  llm_anchors_raw.jsonl.passages.jsonl
research/data/: README.md  eval_heldout_29.csv  inscription_labels.csv  openetruscan_clean.csv  openetruscan_labels.csv  openetruscan_normalized.csv
research/experiments/: README.md
research/notes/: community-curation-design.md  cv-detector-plan-etruscan-glyphs.md  neural-network-stack-summary.md  primary-sources.md  reproduce-rosetta-eval-v1.md  t2-3-implementation-plan.md
research/parked/: NEUROSYMBOLIC_WBS.md  README.md
research/results/: labse_hardneg_t43_FINDINGS.md  labse_hardneg_t43_metrics.json
research/v2/: Makefile  PRE_REGISTRATION.md  README.md
scripts/: README.md  add_docs.py  align_gazetteers.py  build_web_languages.py  classify_all.py  enrich_findspots.py  export_json.py  export_openapi.py  export_rejected.py  find_duplicates.py  generate_embeddings.py  generate_openapi.py  hf_sync.py  ingest_cie_all.py  ingest_cie_vlm.py  ingest_genetics.py  migrate_all_sources.py  migrate_db.py  migrate_to_postgres.py  rapid_tagger.py  seed_larth.py  train_neural.py  update_geotags.py
scripts/attic/: README.md  benchmark_pipelines.py  compare_cie_db.py  enrich_findspots.py  execute_range_split.py  fix_rescued.py  generate_neural_embeddings.py  grade_rescued_inscriptions.py  migrate_to_tembo.py  nuke_placeholder_findspots.py  rescue_etruscan_genitives.py  train_byt5_v2.py
scripts/data_pipeline/: README.md  auto_curate.py  build_pleiades_gazetteer.py  claude_label_corpus.py  cluster_findspots_gemini.py  compare_cie_db.py  enrich_cie_etruscan.py  enrich_cie_etruscan_safe.py  execute_range_split.py  export_cie_csv.py  export_cie_sqlite.py  export_json.py  export_openapi.py  export_rdf.py  export_rejected.py  export_to_postgres.py  fix_latin_db.py  fix_rescued.py  flag_duplicates.py  (+33 more)
src/: init_local_db.py  seed_test_data.py
terraform/: .terraform.lock.hcl  alerts.tf  dashboard.tf  main.tf  variables.tf
tests/: conftest.py  test_adapter.py  test_alignment.py  test_anchors_api.py  test_classifier.py  test_classifier_regression.py  test_cli.py  test_cltk_module.py  test_codex.py  test_corpus.py  test_corpus_geom.py  test_embeddings.py  test_epidoc_leiden.py  test_gazetteer.py  test_graph_logic.py  test_kinship.py  test_leiden.py  test_llm_extract_anchors.py  test_lod.py  test_migrations.py  test_multilingual.py  test_neural.py  test_normalizer.py  test_normalizer_golden.py  test_periodo.py  test_prosopography.py  test_provenance_values.py  test_recogito.py  test_review_anchors.py  test_rosetta.py  test_rosetta_eval.py  test_server.py  test_statistics.py  test_v2_harness.py
tmp/: gen_fds.py
web/: CNAME  app.js  classifier.js  config.js  corpus_data.js  explorer.js  index.html  languages.js  map.html  search.html  stats-app.js  stats.html  style.css
(+322 files in other folders)
